--- a/Ecommerce.Api/appsettings.json
+++ b/Ecommerce.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerString": "Server=.;integrated security=SSPI;initial catalog=EcommerceApp;trustservercertificate=True;"
+  }
 }
+
+
