JWT TOKEN Service

--- a/Ecommerce.Api/appsettings.json
+++ b/Ecommerce.Api/appsettings.json
@@ -9,6 +9,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServerString": "Server=.;integrated security=SSPI;initial catalog=EcommerceApp;trustservercertificate=True;"
+  },
+  "JWTOptions": {
+    "SecretKey": "random-key-is-here",
+    "validIssuer": "Ecommerce-Api",
+    "validAudience": "Ecommerce-Api-Client",
+    "expires": 60
   }
 }
 
